--- a/client/src/components/SubmitForm/SubmitForm.module.css
+++ b/client/src/components/SubmitForm/SubmitForm.module.css
@@ -1,3 +1,22 @@
 .submitform {
-    background: red;
+  width: 220px;
+  background: red;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 25%;
+  left: 0;
+  right: 0;
+  z-index: 1
+}
+
+input {
+    display: block;
+    margin: 20px auto 0 auto;
+}
+
+button {
+    padding: 5px;
+    display: block;
+    margin: 15px auto 0 auto;
 }
