--- a/client/src/components/SubmitForm/SubmitForm.module.css
+++ b/client/src/components/SubmitForm/SubmitForm.module.css
@@ -1,13 +1,15 @@
 .submitform {
+  border: black solid 2px;
   width: 220px;
-  background: red;
+  background: rgb(255, 156, 156);
   position: absolute;
   margin-left: auto;
   margin-right: auto;
   top: 25%;
   left: 0;
   right: 0;
-  z-index: 1
+  z-index: 1;
+  text-align: center
 }
 
 input {
@@ -18,5 +20,5 @@ input {
 button {
     padding: 5px;
     display: block;
-    margin: 15px auto 0 auto;
+    margin: 15px auto 10px auto;
 }
