--- a/client/src/components/Leaderboard/Leaderboard.module.css
+++ b/client/src/components/Leaderboard/Leaderboard.module.css
@@ -1,6 +1,23 @@
 .container{
-    width: 280px;
-    background: rgb(211, 255, 170);
+    width: 240px;
+    background: rgb(255, 238, 183);
     margin: 0 auto;
     padding: 10px;
+    border: 5px solid white;
+}
+
+#leaderboard {
+    text-align: center;
+    font-size: 20pt;
+    font-weight: bold;
+}
+
+#scores {
+    width: 160px;
+    display: block;
+    margin: 0 auto;
+}
+
+li {
+    list-style: none;
 }
