--- a/client/src/components/Leaderboard/Leaderboard.module.css
+++ b/client/src/components/Leaderboard/Leaderboard.module.css
@@ -1,23 +1,37 @@
 .container{
     width: 240px;
     background: rgb(255, 238, 183);
-    margin: 0 auto;
-    padding: 10px;
+    margin: 0 auto 40px auto;
+    padding: 5px;
     border: 5px solid white;
 }
 
 #leaderboard {
     text-align: center;
-    font-size: 20pt;
+    font-size: 16pt;
     font-weight: bold;
 }
 
-#scores {
-    width: 160px;
-    display: block;
-    margin: 0 auto;
+.tableContainer {
+    height: 135px;
+    overflow-y: scroll;
 }
 
-li {
-    list-style: none;
+th {
+    background: chartreuse;
 }
+td {
+    background: white;
+}
+
+table, th, td {
+    border: solid 1px #000;
+    padding: 3px;
+    text-align: center;
+}
+
+table {
+    border-collapse:collapse;
+    margin: 0 auto 0 auto;
+}
+  
