--- a/client/src/components/Question/Question.module.css
+++ b/client/src/components/Question/Question.module.css
@@ -4,6 +4,14 @@
   background-color: rgb(255, 255, 255);
 }
 
+.finished {
+  padding: 5px;
+  border: 1px solid black;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+  margin-top: 40px;
+}
+
 .questiondiv {
   display: block;
   margin: 15px auto 0 auto;
