--- a/client/src/components/Leaderboard/Leaderboard.module.css
+++ b/client/src/components/Leaderboard/Leaderboard.module.css
@@ -17,6 +17,14 @@
     overflow-y: scroll;
 }
 
+pre::-webkit-scrollbar {
+    height: 10px;
+}
+
+pre::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, .3);
+}
+
 th {
     background: chartreuse;
 }
@@ -32,6 +40,7 @@ table, th, td {
 
 table {
     border-collapse:collapse;
+    width: 200px;
     margin: 0 auto 0 auto;
 }
   
