--- a/client/src/components/SubmitForm/SubmitForm.module.css
+++ b/client/src/components/SubmitForm/SubmitForm.module.css
@@ -15,10 +15,23 @@
 input {
     display: block;
     margin: 20px auto 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 button {
-    padding: 5px;
+    padding: 10px;
     display: block;
-    margin: 15px auto 10px auto;
+    margin: 3px auto 4px auto;
 }
+
+#submit {
+  display: inline;
+  background: rgb(128, 255, 86);
+}
+
+#cancel {
+  background: rgb(255, 229, 124);
+  display: inline;
+  margin: 0 10px 15px 0;
+} 
