--- a/client/src/components/Leaderboard/Leaderboard.module.css
+++ b/client/src/components/Leaderboard/Leaderboard.module.css
@@ -1,20 +1,16 @@
 .container{
     width: 240px;
     background: rgb(255, 238, 183);
-    margin: 0 auto 40px auto;
+    margin: 12px auto 40px auto;
     padding: 5px;
     border: 5px solid white;
+    font-family: 'Roboto', sans-serif;
 }
 
 #leaderboard {
     text-align: center;
     font-size: 16pt;
     font-weight: bold;
-}
-
-.tableContainer {
-    height: 135px;
-    overflow-y: scroll;
 }
 
 th {
@@ -24,15 +20,31 @@ td {
     background: white;
 }
 
+td:nth-child(2) {
+    text-align: center;
+  }
+
 table, th, td {
     border: solid 1px #000;
     padding: 3px;
-    text-align: center;
 }
 
 table {
     border-collapse:collapse;
     width: 200px;
-    margin: 0 auto 0 auto;
+    margin: 0 auto 20px auto;
 }
-  
+
+#center {
+    text-align: center;
+    width: 220px;
+    display: block;
+    margin: 0 auto;
+}
+
+.spinny {
+    width: 42px;
+    display: block;
+    margin: 10px auto;
+}
+
