--- a/client/src/components/SubmitForm/SubmitForm.module.css
+++ b/client/src/components/SubmitForm/SubmitForm.module.css
@@ -9,13 +9,14 @@
   left: 0;
   right: 0;
   z-index: 1;
-  text-align: center
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 input {
     display: block;
     margin: 20px auto 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: bold;
 }
 
