--- a/client/src/components/SubmitForm/SubmitForm.module.css
+++ b/client/src/components/SubmitForm/SubmitForm.module.css
@@ -21,18 +21,21 @@ input {
 }
 
 button {
-    padding: 10px;
+    padding: 10px 15px;
     display: block;
     margin: 3px auto 4px auto;
+    font-family: 'Roboto', sans-serif;
+    font-size: 10pt;
 }
 
 #submit {
   display: inline;
   background: rgb(128, 255, 86);
+  font-family: 'Roboto', sans-serif;
 }
 
 #cancel {
   background: rgb(255, 229, 124);
   display: inline;
-  margin: 0 10px 15px 0;
+  font-family: 'Roboto', sans-serif;
 } 
